# mcs/restapi/operations/mcs_api.go
@@ -1,20 +1,21 @@
 // Code generated by go-swagger; DO NOT EDIT.
 
-// // This file is part of MinIO Kubernetes Cloud
-// // Copyright (c) 2019 MinIO, Inc.
-// //
-// // This program is free software: you can redistribute it and/or modify
-// // it under the terms of the GNU Affero General Public License as published by
-// // the Free Software Foundation, either version 3 of the License, or
-// // (at your option) any later version.
-// //
-// // This program is distributed in the hope that it will be useful,
-// // but WITHOUT ANY WARRANTY; without even the implied warranty of
-// // MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-// // GNU Affero General Public License for more details.
-// //
-// // You should have received a copy of the GNU Affero General Public License
-// // along with this program.  If not, see <http://www.gnu.org/licenses/>.
+// This file is part of MinIO Console Server
+// Copyright (c) 2019 MinIO, Inc.
+//
+// This program is free software: you can redistribute it and/or modify
+// it under the terms of the GNU Affero General Public License as published by
+// the Free Software Foundation, either version 3 of the License, or
+// (at your option) any later version.
+//
+// This program is distributed in the hope that it will be useful,
+// but WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+// GNU Affero General Public License for more details.
+//
+// You should have received a copy of the GNU Affero General Public License
+// along with this program.  If not, see <http://www.gnu.org/licenses/>.
+//
 
 package operations
 
@@ -35,6 +36,7 @@ import (
 	"github.com/go-openapi/strfmt"
 	"github.com/go-openapi/swag"
 
+	"github.com/minio/m3/mcs/restapi/operations/admin_api"
 	"github.com/minio/m3/mcs/restapi/operations/user_api"
 )
 
@@ -61,6 +63,9 @@ func NewMcsAPI(spec *loads.Document) *McsAPI {
 		}),
 		UserAPIListBucketsHandler: user_api.ListBucketsHandlerFunc(func(params user_api.ListBucketsParams) middleware.Responder {
 			return middleware.NotImplemented("operation user_api.ListBuckets has not yet been implemented")
+		}),
+		AdminAPIListUsersHandler: admin_api.ListUsersHandlerFunc(func(params admin_api.ListUsersParams) middleware.Responder {
+			return middleware.NotImplemented("operation admin_api.ListUsers has not yet been implemented")
 		}),
 		UserAPIMakeBucketHandler: user_api.MakeBucketHandlerFunc(func(params user_api.MakeBucketParams) middleware.Responder {
 			return middleware.NotImplemented("operation user_api.MakeBucket has not yet been implemented")
@@ -100,6 +105,8 @@ type McsAPI struct {
 	UserAPIDeleteBucketHandler user_api.DeleteBucketHandler
 	// UserAPIListBucketsHandler sets the operation handler for the list buckets operation
 	UserAPIListBucketsHandler user_api.ListBucketsHandler
+	// AdminAPIListUsersHandler sets the operation handler for the list users operation
+	AdminAPIListUsersHandler admin_api.ListUsersHandler
 	// UserAPIMakeBucketHandler sets the operation handler for the make bucket operation
 	UserAPIMakeBucketHandler user_api.MakeBucketHandler
 	// ServeError is called when an error is received, there is a default handler
@@ -174,6 +181,10 @@ func (o *McsAPI) Validate() error {
 
 	if o.UserAPIListBucketsHandler == nil {
 		unregistered = append(unregistered, "UserAPI.ListBucketsHandler")
+	}
+
+	if o.AdminAPIListUsersHandler == nil {
+		unregistered = append(unregistered, "AdminAPI.ListUsersHandler")
 	}
 
 	if o.UserAPIMakeBucketHandler == nil {
@@ -281,6 +292,11 @@ func (o *McsAPI) initHandlerCache() {
 		o.handlers["GET"] = make(map[string]http.Handler)
 	}
 	o.handlers["GET"]["/api/v1/buckets"] = user_api.NewListBuckets(o.context, o.UserAPIListBucketsHandler)
+
+	if o.handlers["GET"] == nil {
+		o.handlers["GET"] = make(map[string]http.Handler)
+	}
+	o.handlers["GET"]["/api/v1/users"] = admin_api.NewListUsers(o.context, o.AdminAPIListUsersHandler)
 
 	if o.handlers["POST"] == nil {
 		o.handlers["POST"] = make(map[string]http.Handler)
